correção merge conflict

--- a/codigo/public/modulos/ong/cadastro_ongs.html
+++ b/codigo/public/modulos/ong/cadastro_ongs.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="pt-br">
 
 <head>
@@ -16,24 +16,24 @@
     <header class="d-flex align-items-center p-3 bg-light position-relative">
         <a href="../../index.html" class="d-flex align-items-center position-relative z-2"> 
             <img src="../../assets/images/logo.png" alt="Logo" class="logo me-3"> 
-            <h2 class="m-0 text-center">Alimentação <br> Para <br> Todos</h2>
+            <h2 class="m-0 text-center">AlimentaÃ§Ã£o <br> Para <br> Todos</h2>
         </a>
         <nav class="d-flex align-items-center gap-3 position-absolute top-50 start-50 translate-middle-x">
             <a href="../../ranking.html" class="nav-link link-white">Ranking</a> 
             <a href="ongs.html" class="nav-link link-white">ONGs</a>
-            <a href="../volunteers/voluntariado_ongs.html" class="nav-link link-white">Seja um Voluntário</a>
+            <a href="../volunteers/voluntariado_ongs.html" class="nav-link link-white">Seja um VoluntÃ¡rio</a>
         </nav>
         
         <div class="dropdown ms-auto position-relative z-2 d-none" id="userDropdownContainer">
             <button class="btn btn-link dropdown-toggle d-flex align-items-center p-0" id="usuarioDropdown"
                 data-bs-toggle="dropdown" aria-expanded="false">
-<<<<<<< HEAD:codigo/public/modulos/ong/cadastro_ongs.html
-                <h3 class="m-0 me-2" id="userNameDisplay">Usuário</h3>
-                <img src="../../assets/images/usuario.png" alt="Usuário" class="usuario" id="userImageDisplay"> 
-=======
-                <h3 class="m-0 me-2 hide-on-mobile" id="userNameDisplay">Usuário</h3>
-                <img src="assets/images/usuario.png" alt="Usuário" class="usuario" id="userImageDisplay"> 
->>>>>>> 68f5d1e4e815514384f23c153aaa425a1bd38b5d:codigo/public/cadastro_ongs.html
+g/cadastro_ongs.html
+                <h3 class="m-0 me-2" id="userNameDisplay">UsuÃ¡rio</h3>
+                <img src="../../assets/images/usuario.png" alt="UsuÃ¡rio" class="usuario" id="userImageDisplay"> 
+
+                <h3 class="m-0 me-2 " id="userNameDisplay">UsuÃ¡rio</h3>
+                <img src="../../assets/images/usuario.png" alt="UsuÃ¡rio" class="usuario" id="userImageDisplay"> 
+o_ongs.html
             </button>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="usuarioDropdown">
                 <li><a class="dropdown-item" href="/codigo/public/modulos/user/perfil_usuario.html" id="dropdownProfileLink">Perfil</a></li> 
@@ -43,13 +43,13 @@
         </div>
 
         <div class="usuario-container ms-auto" id="userSection">
-<<<<<<< HEAD:codigo/public/modulos/ong/cadastro_ongs.html
+g/cadastro_ongs.html
             <a href="/codigo/public/modulos/user/login.html" class="btn btn-nutritech-primary me-2" id="loginButton">Login</a> 
             <a href="/codigo/public/modulos/user/cadastro_usuario.html" class="btn btn-nutritech-secondary" id="registerButton">Cadastrar</a>
-=======
+
             <a href="login.html" class="btn btn-nutritech-primary me-2" id="loginButton">Login</a> 
             <a href="cadastro_usuario.html" class="user-btn" style="text-decoration: none; display: inline-block; text-align: center; padding: 10px 20px; background-color: #5D8736; color: rgb(255, 255, 255); border-radius: 5px; font-weight: bold;">Sou Doador</a>
->>>>>>> 68f5d1e4e815514384f23c153aaa425a1bd38b5d:codigo/public/cadastro_ongs.html
+o_ongs.html
         </div>
     </header>
     <main>
@@ -58,14 +58,14 @@
                 <h1>Cadastro de ONG</h1>
 
                 <fieldset>
-                    <legend>Informações da Instituição</legend>
+                    <legend>InformaÃ§Ãµes da InstituiÃ§Ã£o</legend>
                     <div class="input-item full-width">
                         <label for="imagem">Imagem da ONG (para perfil)</label>
                         <input type="file" id="imagem" name="imagem" accept="image/*">
                     </div>
                     <div class="input-group">
                         <div class="input-item">
-                            <label for="nome">Nome da instituição:</label>
+                            <label for="nome">Nome da instituiÃ§Ã£o:</label>
                             <input type="text" id="nome" name="nome" required>
                         </div>
                         <div class="input-item">
@@ -75,7 +75,7 @@
                     </div>
                     <div class="input-group">
                         <div class="input-item">
-                            <label for="data_fundacao">Data de Fundação:</label>
+                            <label for="data_fundacao">Data de FundaÃ§Ã£o:</label>
                             <input type="date" id="data_fundacao" name="data_fundacao" required>
                         </div>
                     </div>
@@ -96,14 +96,14 @@
                 </fieldset>
 
                 <fieldset>
-                    <legend>Endereço</legend>
+                    <legend>EndereÃ§o</legend>
                     <div class="input-group">
                         <div class="input-item">
                             <label for="rua">Rua:</label>
                             <input type="text" id="rua" name="rua" required>
                         </div>
                         <div class="input-item">
-                            <label for="numero">Número:</label>
+                            <label for="numero">NÃºmero:</label>
                             <input type="number" id="numero" name="numero" required>
                         </div>
                     </div>
@@ -148,7 +148,7 @@
                 </fieldset>
 
                 <fieldset id="tiposDoacaoFieldset">
-                    <legend>Tipos de Doação Aceitos</legend>
+                    <legend>Tipos de DoaÃ§Ã£o Aceitos</legend>
                     <div class="input-group">
                         <div class="input-item">
                             <input type="checkbox" id="tipo_doacao_alimentos" name="tipo_doacao" value="alimentos">
@@ -164,7 +164,7 @@
                 <fieldset>
                     <legend>Sobre a ONG</legend>
                     <div class="input-item">
-                        <label for="descricao">Descrição/Sobre a ONG:</label>
+                        <label for="descricao">DescriÃ§Ã£o/Sobre a ONG:</label>
                         <textarea id="descricao" name="descricao" required></textarea>
                     </div>
                 </fieldset>
@@ -192,7 +192,7 @@
             </div>
 
             <div class="footer-center text-center">
-                <p>© 2025 NutriTech</p>
+                <p>Â© 2025 NutriTech</p>
             </div>
 
             <div class="footer-right text-center text-md-end">
