--- a/codigo/public/modulos/donations/cadastro_doacao.html
+++ b/codigo/public/modulos/donations/cadastro_doacao.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro Doação</title>
+    <title>Cadastro DoaÃ§Ã£o</title>
     <link rel="stylesheet" href="../../assets/css/base.css">
-    <link rel="stylesheet" href="../../assets/css/cadastro_doação.css">
+    <link rel="stylesheet" href="../../assets/css/cadastro_doaÃ§Ã£o.css">
     <link href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
 </head>
@@ -14,24 +14,24 @@
     <header class="d-flex align-items-center p-3 bg-light position-relative">
         <a href="../../index.html" class="d-flex align-items-center position-relative z-2"> 
             <img src="../../assets/images/logo.png" alt="Logo" class="logo me-3"> 
-            <h2 class="m-0 text-center">Alimentação <br> Para <br> Todos</h2>
+            <h2 class="m-0 text-center">AlimentaÃ§Ã£o <br> Para <br> Todos</h2>
         </a>
         <nav class="d-flex align-items-center gap-3 position-absolute top-50 start-50 translate-middle-x">
             <a href="../../ranking.html" class="nav-link link-white">Ranking</a> 
             <a href="../ong/ongs.html" class="nav-link link-white">ONGs</a>
-            <a href="../volunteers/voluntariado_ongs.html" class="nav-link link-white">Seja um Voluntário</a>
+            <a href="../volunteers/voluntariado_ongs.html" class="nav-link link-white">Seja um VoluntÃ¡rio</a>
         </nav>
         
         <div class="dropdown ms-auto position-relative z-2 d-none" id="userDropdownContainer">
             <button class="btn btn-link dropdown-toggle d-flex align-items-center p-0" id="usuarioDropdown"
                 data-bs-toggle="dropdown" aria-expanded="false">
-<<<<<<< HEAD:codigo/public/modulos/donations/cadastro_doacao.html
-                <h3 class="m-0 me-2" id="userNameDisplay">Usuário</h3>
-                <img src="../../assets/images/usuario.png" alt="Usuário" class="usuario" id="userImageDisplay"> 
-=======
-                <h3 class="m-0 me-2 hide-on-mobile" id="userNameDisplay">Usuário</h3>
-                <img src="assets/images/usuario.png" alt="Usuário" class="usuario" id="userImageDisplay"> 
->>>>>>> 68f5d1e4e815514384f23c153aaa425a1bd38b5d:codigo/public/cadastro_doacao.html
+ations/cadastro_doacao.html
+                <h3 class="m-0 me-2" id="userNameDisplay">UsuÃ¡rio</h3>
+                <img src="../../assets/images/usuario.png" alt="UsuÃ¡rio" class="usuario" id="userImageDisplay"> 
+
+                <h3 class="m-0 me-2 " id="userNameDisplay">UsuÃ¡rio</h3>
+                <img src="../../assets/images/usuario.png" alt="UsuÃ¡rio" class="usuario" id="userImageDisplay"> 
+o_doacao.html
             </button>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="usuarioDropdown">
                 <li><a class="dropdown-item" href="/codigo/public/modulos/user/perfil_usuario.html" id="dropdownProfileLink">Perfil</a></li> 
@@ -49,7 +49,7 @@
 <main class="container-fluid my-5 px-5">
     <div class="row">
         <div class="col-md-6 border-end pe-4 d-flex flex-column align-items-center">
-            <h1 class="mb-4 text-center">Cadastro de Doação</h1>
+            <h1 class="mb-4 text-center">Cadastro de DoaÃ§Ã£o</h1>
             <h4 id="donation-target-ong-name" class="mb-3 text-center"></h4> <!-- Placeholder for ONG name -->
             <form action="" class="row g-3">
                 <div class="col-12">
@@ -79,7 +79,7 @@
                     <p id="valorDoacao" class="fw-bold">R$0</p>
                 </div>
                 <div class="col-12">
-                    <input type="submit" class="btn btn-primary" value="Cadastrar Doação">
+                    <input type="submit" class="btn btn-primary" value="Cadastrar DoaÃ§Ã£o">
                 </div>
             </form>
         </div>
@@ -99,7 +99,7 @@
             </div>
 
             <div class="footer-center text-center">
-                <p>© 2025 NutriTech</p>
+                <p>Â© 2025 NutriTech</p>
             </div>
 
             <div class="footer-right text-center text-md-end">
