--- a/codigo/public/modulos/ong/necessidade.html
+++ b/codigo/public/modulos/ong/necessidade.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro Doação</title>
+    <title>Cadastro DoaÃ§Ã£o</title>
     <link rel="stylesheet" href="../../assets/css/base.css">
     <link rel="stylesheet" href="../../assets/css/necessidade.css">
     <link href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap " rel="stylesheet">
@@ -13,24 +13,24 @@
     <header class="d-flex align-items-center p-3 bg-light position-relative">
         <a href="../../index.html" class="d-flex align-items-center position-relative z-2"> 
             <img src="../../assets/images/logo.png" alt="Logo" class="logo me-3"> 
-            <h2 class="m-0 text-center">Alimentação <br> Para <br> Todos</h2>
+            <h2 class="m-0 text-center">AlimentaÃ§Ã£o <br> Para <br> Todos</h2>
         </a>
         <nav class="d-flex align-items-center gap-3 position-absolute top-50 start-50 translate-middle-x">
             <a href="../../ranking.html" class="nav-link link-white">Ranking</a> 
             <a href="ongs.html" class="nav-link link-white">ONGs</a>
-            <a href="../volunteers/voluntariado_ongs.html" class="nav-link link-white">Seja um Voluntário</a>
+            <a href="../volunteers/voluntariado_ongs.html" class="nav-link link-white">Seja um VoluntÃ¡rio</a>
         </nav>
         
         <div class="dropdown ms-auto position-relative z-2 d-none" id="userDropdownContainer">
             <button class="btn btn-link dropdown-toggle d-flex align-items-center p-0" id="usuarioDropdown"
                 data-bs-toggle="dropdown" aria-expanded="false">
-<<<<<<< HEAD:codigo/public/modulos/ong/necessidade.html
-                <h3 class="m-0 me-2" id="userNameDisplay">Usuário</h3>
-                <img src="../../assets/images/usuario.png" alt="Usuário" class="usuario" id="userImageDisplay"> 
-=======
-                <h3 class="m-0 me-2 hide-on-mobile" id="userNameDisplay">Usuário</h3>
-                <img src="assets/images/usuario.png" alt="Usuário" class="usuario" id="userImageDisplay"> 
->>>>>>> 68f5d1e4e815514384f23c153aaa425a1bd38b5d:codigo/public/necessidade.html
+g/necessidade.html
+                <h3 class="m-0 me-2" id="userNameDisplay">UsuÃ¡rio</h3>
+                <img src="../../assets/images/usuario.png" alt="UsuÃ¡rio" class="usuario" id="userImageDisplay"> 
+
+                <h3 class="m-0 me-2 " id="userNameDisplay">UsuÃ¡rio</h3>
+                <img src="../../assets/images/usuario.png" alt="UsuÃ¡rio" class="usuario" id="userImageDisplay"> 
+ecessidade.html
             </button>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="usuarioDropdown">
                 <li><a class="dropdown-item" href="/codigo/public/modulos/user/perfil_usuario.html" id="dropdownProfileLink">Perfil</a></li> 
@@ -45,10 +45,10 @@
         </div>
     </header>
 
-    <!-- Conteúdo Dinâmico Gerado pelo React -->
+    <!-- ConteÃºdo DinÃ¢mico Gerado pelo React -->
     <main>
          <div class="form-container">
-            <!-- Coluna esquerda: Formulário -->
+            <!-- Coluna esquerda: FormulÃ¡rio -->
             <div class="form-left">
                 <div class="form-group">
                     <label>
@@ -61,35 +61,35 @@
                     <label>
                         <input type="radio" name="type" value="voluntario" onclick="toggleForm()">
                         <svg viewBox="0 0 24 24" width="11" height="24" fill="#368758">
-                            <img src="../../assets/images/icone_pessoa.png" alt="voluntário" width="20">
+                            <img src="../../assets/images/icone_pessoa.png" alt="voluntÃ¡rio" width="20">
                         </svg>
-                        Voluntário
+                        VoluntÃ¡rio
                     </label>
                 </div>
 
                 <div id="alimento-form" class="form-section">
                     <h3>Adicionar Alimento</h3>
                     <div class="form-group">
-                        <input type="text" id="alimento-item" placeholder="Qual alimento está precisando?" />
+                        <input type="text" id="alimento-item" placeholder="Qual alimento estÃ¡ precisando?" />
                     </div>
                     <div class="form-group">
                         <input type="number" id="alimento-quantidade" placeholder="Quantidade" min="1" step="1" />
                         <input type="number" id="alimento-valor" placeholder="Valor por Unidade (R$)" step="0.01" min="0" />
                     </div>
                     <div class="form-group">
-                        <label for="alimento-deadline">Até quando precisa?</label>
+                        <label for="alimento-deadline">AtÃ© quando precisa?</label>
                         <input type="date" id="alimento-deadline" min="" />
                     </div>
                     <button onclick="submitData('alimento')" class="btn-submit">Enviar</button>
                 </div>
 
                 <div id="voluntario-form" class="form-section hidden">
-                    <h3>Adicionar Voluntário</h3>
+                    <h3>Adicionar VoluntÃ¡rio</h3>
                     <div class="form-group">
-                        <input type="text" id="voluntario-item" placeholder="Qual voluntário está precisando?" />
+                        <input type="text" id="voluntario-item" placeholder="Qual voluntÃ¡rio estÃ¡ precisando?" />
                     </div>
                     <div class="form-group">
-                        <label for="voluntario-deadline">Até quando precisa?</label>
+                        <label for="voluntario-deadline">AtÃ© quando precisa?</label>
                         <input type="date" id="voluntario-deadline" min="" />
                     </div>
                     <button onclick="submitData('voluntario')" class="btn-submit">Enviar</button>
@@ -108,7 +108,7 @@
         </div>
     </main>
 
-    <!-- Footer Estático -->
+    <!-- Footer EstÃ¡tico -->
     <footer class="bg-light py-4">
         <div class="container d-flex justify-content-between align-items-center">
             <div class="footer-left text-center text-md-start">
@@ -117,7 +117,7 @@
             </div>
 
             <div class="footer-center text-center">
-                <p>© 2025 NutriTech</p>
+                <p>Â© 2025 NutriTech</p>
             </div>
 
             <div class="footer-right text-center text-md-end">
