--- a/codigo/public/modulos/volunteers/cadastro_voluntarios.html
+++ b/codigo/public/modulos/volunteers/cadastro_voluntarios.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seja um Voluntário</title>
+    <title>Seja um VoluntÃ¡rio</title>
     <link rel="stylesheet" href="../../assets/css/base.css">
     <link rel="stylesheet" href="../../assets/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
@@ -13,24 +13,24 @@
     <header class="d-flex align-items-center p-3 bg-light position-relative">
         <a href="../../index.html" class="d-flex align-items-center position-relative z-2"> 
             <img src="../../assets/images/logo.png" alt="Logo" class="logo me-3"> 
-            <h2 class="m-0 text-center">Alimentação <br> Para <br> Todos</h2>
+            <h2 class="m-0 text-center">AlimentaÃ§Ã£o <br> Para <br> Todos</h2>
         </a>
         <nav class="d-flex align-items-center gap-3 position-absolute top-50 start-50 translate-middle-x">
             <a href="../../ranking.html" class="nav-link link-white">Ranking</a> 
             <a href="../ong/ongs.html" class="nav-link link-white">ONGs</a>
-            <a href="voluntariado_ongs.html" class="nav-link link-white">Seja um Voluntário</a>
+            <a href="voluntariado_ongs.html" class="nav-link link-white">Seja um VoluntÃ¡rio</a>
         </nav>
         
         <div class="dropdown ms-auto position-relative z-2 d-none" id="userDropdownContainer">
             <button class="btn btn-link dropdown-toggle d-flex align-items-center p-0" id="usuarioDropdown"
                 data-bs-toggle="dropdown" aria-expanded="false">
-<<<<<<< HEAD:codigo/public/modulos/volunteers/cadastro_voluntarios.html
-                <h3 class="m-0 me-2" id="userNameDisplay">Usuário</h3>
-                <img src="../../assets/images/usuario.png" alt="Usuário" class="usuario" id="userImageDisplay"> 
-=======
-                <h3 class="m-0 me-2 hide-on-mobile" id="userNameDisplay">Usuário</h3>
-                <img src="assets/images/usuario.png" alt="Usuário" class="usuario" id="userImageDisplay"> 
->>>>>>> 68f5d1e4e815514384f23c153aaa425a1bd38b5d:codigo/public/cadastro_voluntarios.html
+teers/cadastro_voluntarios.html
+                <h3 class="m-0 me-2" id="userNameDisplay">UsuÃ¡rio</h3>
+                <img src="../../assets/images/usuario.png" alt="UsuÃ¡rio" class="usuario" id="userImageDisplay"> 
+
+                <h3 class="m-0 me-2 " id="userNameDisplay">UsuÃ¡rio</h3>
+                <img src="../../assets/images/usuario.png" alt="UsuÃ¡rio" class="usuario" id="userImageDisplay"> 
+o_voluntarios.html
             </button>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="usuarioDropdown">
                 <li><a class="dropdown-item" href="../user/perfil_usuario.html" id="dropdownProfileLink">Perfil</a></li> 
@@ -47,33 +47,33 @@
 
     <main>
          <div id="pagina">
-            <h4 id="titulo-pagina">Seja um Voluntário!</h4>
+            <h4 id="titulo-pagina">Seja um VoluntÃ¡rio!</h4>
             <h5 id="ong-name" class="text-center mb-4"></h5>
                 <form id="form-voluntarios">
                     <div class="container-checkboxes">
                         <div class="disponibilidade">
                             <h6 class="titulo-disponibilidade">Disponibilidade</h6>
-                            <p>Selecione os dias em que você tem disponibilidade para ser voluntário.</p>
+                            <p>Selecione os dias em que vocÃª tem disponibilidade para ser voluntÃ¡rio.</p>
                             <input type="text" id="dias_disponiveis" class="form-control" placeholder="Escolha uma ou mais datas">
                         </div>
 
                         <div class="areas-interesse">
-                            <h6 class="titulo-areas-interesse">Áreas de Interesse</h6>
+                            <h6 class="titulo-areas-interesse">Ãreas de Interesse</h6>
                             <div class="tabela-areas-interesse">
-                                <div class="opcao">Distribuição de Alimentos</div>
-                                <div><input type="checkbox" name="area-interesse" value="Distribuição de Alimentos"></div>
+                                <div class="opcao">DistribuiÃ§Ã£o de Alimentos</div>
+                                <div><input type="checkbox" name="area-interesse" value="DistribuiÃ§Ã£o de Alimentos"></div>
 
-                                <div class="opcao">Arrecadação</div>
-                                <div><input type="checkbox" name="area-interesse" value="Arrecadação"></div>
+                                <div class="opcao">ArrecadaÃ§Ã£o</div>
+                                <div><input type="checkbox" name="area-interesse" value="ArrecadaÃ§Ã£o"></div>
 
-                                <div class="opcao">Apoio Logístico</div>
-                                <div><input type="checkbox" name="area-interesse" value="Apoio Logístico"></div>
+                                <div class="opcao">Apoio LogÃ­stico</div>
+                                <div><input type="checkbox" name="area-interesse" value="Apoio LogÃ­stico"></div>
 
-                                <div class="opcao">Divulgação e Redes Sociais</div>
-                                <div><input type="checkbox" name="area-interesse" value="Divulgação e Redes Sociais"></div>
+                                <div class="opcao">DivulgaÃ§Ã£o e Redes Sociais</div>
+                                <div><input type="checkbox" name="area-interesse" value="DivulgaÃ§Ã£o e Redes Sociais"></div>
 
-                                <div class="opcao">Atendimento ao Público</div>
-                                <div><input type="checkbox" name="area-interesse" value="Atendimento ao Público"></div>
+                                <div class="opcao">Atendimento ao PÃºblico</div>
+                                <div><input type="checkbox" name="area-interesse" value="Atendimento ao PÃºblico"></div>
 
                             </div>
                         </div>
@@ -91,7 +91,7 @@
             </div>
 
             <div class="footer-center text-center">
-                <p>© 2025 NutriTech</p>
+                <p>Â© 2025 NutriTech</p>
             </div>
 
             <div class="footer-right text-center text-md-end">
