tela about feita

--- a/codigo/public/index.html
+++ b/codigo/public/index.html
@@ -24,12 +24,13 @@
             <a href="ranking.html" class="nav-link link-white">Ranking</a> 
             <a href="modulos/ong/ongs.html" class="nav-link link-white">ONGs</a>
             <a href="modulos/volunteers/voluntariado_ongs.html" class="nav-link link-white">Seja um Voluntário</a>
+            <a href="about.html" class="nav-link link-white">Sobre Nós</a>
         </nav>
         
         <div class="dropdown ms-auto position-relative z-2 d-none" id="userDropdownContainer">
             <button class="btn btn-link dropdown-toggle d-flex align-items-center p-0" id="usuarioDropdown"
                 data-bs-toggle="dropdown" aria-expanded="false">
-                <h3 class="m-0 me-2 hide-on-mobile" id="userNameDisplay">Usuário</h3>
+                <h3 class="m-0 me-2" id="userNameDisplay">Usuário</h3>
                 <img src="assets/images/usuario.png" alt="Usuário" class="usuario" id="userImageDisplay"> 
             </button>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="usuarioDropdown">
