--- a/codigo/public/modulos/donations/agendamento.html
+++ b/codigo/public/modulos/donations/agendamento.html
@@ -3,36 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro DoaÃ§Ã£o</title>
+    <title>Cadastro Doação</title>
     <link href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <link rel="stylesheet" href="../../assets/css/base.css">
-    <link rel="stylesheet" href="../../assets/css/cadastro_doaÃ§Ã£o.css">
+    <link rel="stylesheet" href="../../assets/css/cadastro_doação.css">
     <link rel="stylesheet" href="../../assets/css/style.css">
 </head>
 <body>
     <header class="d-flex align-items-center p-3 bg-light position-relative">
         <a href="../../index.html" class="d-flex align-items-center position-relative z-2"> 
             <img src="../../assets/images/logo.png" alt="Logo" class="logo me-3"> 
-            <h2 class="m-0 text-center">AlimentaÃ§Ã£o <br> Para <br> Todos</h2>
+            <h2 class="m-0 text-center">Alimentação <br> Para <br> Todos</h2>
         </a>
         <nav class="d-flex align-items-center gap-3 position-absolute top-50 start-50 translate-middle-x">
             <a href="../../ranking.html" class="nav-link link-white">Ranking</a> 
             <a href="../ong/ongs.html" class="nav-link link-white">ONGs</a>
-            <a href="../volunteers/voluntariado_ongs.html" class="nav-link link-white">Seja um VoluntÃ¡rio</a>
+            <a href="../volunteers/voluntariado_ongs.html" class="nav-link link-white">Seja um Voluntário</a>
         </nav>
         
         <div class="dropdown ms-auto position-relative z-2 d-none" id="userDropdownContainer">
             <button class="btn btn-link dropdown-toggle d-flex align-items-center p-0" id="usuarioDropdown"
                 data-bs-toggle="dropdown" aria-expanded="false">
-ations/agendamento.html
-                <h3 class="m-0 me-2" id="userNameDisplay">UsuÃ¡rio</h3>
-                <img src="../../assets/images/usuario.png" alt="UsuÃ¡rio" class="usuario" id="userImageDisplay"> 
-
-               <h3 class="m-0 me-2 " id="userNameDisplay">UsuÃ¡rio</h3>
-                <img src="../../assets/images/usuario.png" alt="UsuÃ¡rio" class="usuario" id="userImageDisplay"> 
-damento.html
+                <h3 class="m-0 me-2" id="userNameDisplay">Usuário</h3>
+                <img src="../../assets/images/usuario.png" alt="Usuário" class="usuario" id="userImageDisplay"> 
             </button>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="usuarioDropdown">
                 <li><a class="dropdown-item" href="/codigo/public/modulos/user/perfil_usuario.html" id="dropdownProfileLink">Perfil</a></li> 
@@ -49,7 +44,7 @@ damento.html
 
     <main>
         <div class="container my-5">
-            <h1 class="mb-4">Agendamento de Coleta de DoaÃ§Ã£o</h1>
+            <h1 class="mb-4">Agendamento de Coleta de Doação</h1>
             <h3 id="ong-nome-agendamento" class="mb-4"></h3>
 
             <form id="agendamentoForm">
@@ -61,7 +56,7 @@ damento.html
                 </div>
 
                 <div class="mb-3">
-                    <label for="dataColeta" class="form-label">Selecione um dia disponÃ­vel para a coleta:</label>
+                    <label for="dataColeta" class="form-label">Selecione um dia disponível para a coleta:</label>
                     <input type="text" class="form-control" id="dataColeta" name="dataColeta" placeholder="Escolha uma data" required>
                 </div>
 
@@ -80,7 +75,7 @@ damento.html
             </div>
 
             <div class="footer-center text-center">
-                <p>Â© 2025 NutriTech</p>
+                <p>© 2025 NutriTech</p>
             </div>
 
             <div class="footer-right text-center text-md-end">
