--- a/codigo/public/modulos/donations/gerenciar_recorrencias.html
+++ b/codigo/public/modulos/donations/gerenciar_recorrencias.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>DoaÃ§Ãµes Recorrentes</title>
+  <title>Doações Recorrentes</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../../assets/css/base.css">
   <link rel="stylesheet" href="../../assets/css/recorrencia.css">
@@ -13,35 +13,30 @@
     <header class="d-flex align-items-center p-3 bg-light position-relative">
         <a href="../../index.html" class="d-flex align-items-center position-relative z-2"> 
             <img src="../../assets/images/logo.png" alt="Logo" class="logo me-3"> 
-            <h2 class="m-0 text-center">AlimentaÃ§Ã£o <br> Para <br> Todos</h2>
+            <h2 class="m-0 text-center">Alimentação <br> Para <br> Todos</h2>
         </a>
         <nav class="d-flex align-items-center gap-3 position-absolute top-50 start-50 translate-middle-x">
             <a href="../../ranking.html" class="nav-link link-white">Ranking</a> 
             <a href="../ong/ongs.html" class="nav-link link-white">ONGs</a>
-            <a href="../volunteers/voluntariado_ongs.html" class="nav-link link-white">Seja um VoluntÃ¡rio</a>
+            <a href="../volunteers/voluntariado_ongs.html" class="nav-link link-white">Seja um Voluntário</a>
         </nav>
         
         <div class="dropdown ms-auto position-relative z-2 d-none" id="userDropdownContainer">
             <button class="btn btn-link dropdown-toggle d-flex align-items-center p-0" id="usuarioDropdown"
                 data-bs-toggle="dropdown" aria-expanded="false">
-ations/gerenciar_recorrencias.html
-                <h3 class="m-0 me-2" id="userNameDisplay">UsuÃ¡rio</h3>
-                <img src="../../assets/images/usuario.png" alt="UsuÃ¡rio" class="usuario" id="userImageDisplay"> 
-
-                <h3 class="m-0 me-2 " id="userNameDisplay">UsuÃ¡rio</h3>
-                <img src="../../assets/images/usuario.png" alt="UsuÃ¡rio" class="usuario" id="userImageDisplay"> 
-enciar_recorrencias.html
+                <h3 class="m-0 me-2" id="userNameDisplay">Usuário</h3>
+                <img src="../../assets/images/usuario.png" alt="Usuário" class="usuario" id="userImageDisplay"> 
             </button>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="usuarioDropdown">
-                <li><a class="dropdown-item" href="../user/perfil_usuario.html" id="dropdownProfileLink">Perfil</a></li> 
+                <li><a class="dropdown-item" href="/codigo/public/modulos/user/perfil_usuario.html" id="dropdownProfileLink">Perfil</a></li> 
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="#" id="logoutLink">Sair</a></li>
             </ul>
         </div>
 
         <div class="usuario-container ms-auto" id="userSection">
-            <a href="../login/login.html" class="btn btn-nutritech-primary me-2" id="loginButton">Login</a> 
-            <a href="../user/cadastro_usuario.html" class="btn btn-nutritech-secondary" id="registerButton">Cadastrar</a>
+            <a href="/codigo/public/modulos/user/login.html" class="btn btn-nutritech-primary me-2" id="loginButton">Login</a> 
+            <a href="/codigo/public/modulos/user/cadastro_usuario.html" class="btn btn-nutritech-secondary" id="registerButton">Cadastrar</a>
         </div>
     </header>
   
@@ -62,19 +57,19 @@ enciar_recorrencias.html
           </section>
         <div class="rounded-1 shadow-sm p-3 mb-1">
           <div class="shadow  align-items-center p-3">
-            <!--BotÃ£o nova doaÃ§Ã£o-->
+            <!--Botão nova doação-->
             <section id="doar" class="py-3">
-              <p id="gestao" class="h5 text-center pb-2 mb-2">FaÃ§a uma nova doaÃ§Ã£o</p>
-              <a href="../ong/ongs.html" id="nova-doacao" class="btn bg-verde-fundo w-100 rounded-pill px-3 py-6 shadow text-light">Nova DoaÃ§Ã£o</a>
+              <p id="gestao" class="h5 text-center pb-2 mb-2">Faça uma nova doação</p>
+              <a href="../ong/ongs.html" id="nova-doacao" class="btn bg-verde-fundo w-100 rounded-pill px-3 py-6 shadow text-light">Nova Doação</a>
             </section>
           </div>
         </div>
         </div>
       
-        <!-- Lista DoaÃ§Ãµes -->
+        <!-- Lista Doações -->
         <div class="col-md-8">
           <section id="doacoes">
-            <h2 class="h4 text-center mb-4 border-bottom border-success border-2 py-5 pb-2">Suas DoaÃ§Ãµes Recorrentes</h2>
+            <h2 class="h4 text-center mb-4 border-bottom border-success border-2 py-5 pb-2">Suas Doações Recorrentes</h2>
             <div id="lista-doacoes" class="p-3 rounded-4 shadow">Carregando...</div>
 
           </section>
@@ -87,7 +82,7 @@ enciar_recorrencias.html
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="modalComprovanteLabel">Comprovante de DoaÃ§Ã£o</h1>
+        <h1 class="modal-title fs-5" id="modalComprovanteLabel">Comprovante de Doação</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
       </div>
       <div class="modal-body" id="modal-conteudo">
@@ -101,12 +96,12 @@ enciar_recorrencias.html
   </div>
 </div>
 
-<!-- Modal Editar DoaÃ§Ã£o -->
+<!-- Modal Editar Doação -->
 <div class="modal fade" id="modalEditar" tabindex="-1" aria-labelledby="modalEditarLabel" aria-hidden="true">
   <div class="modal-dialog">
     <form id="form-editar" class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="modalEditarLabel">Editar DoaÃ§Ã£o</h5>
+        <h5 class="modal-title" id="modalEditarLabel">Editar Doação</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
       </div>
       <div class="modal-body">
@@ -152,11 +147,11 @@ enciar_recorrencias.html
             <input type="date" class="form-control" id="edit-dataNascimento">
           </div>
           <div class="mb-3">
-            <label for="edit-logradouro" class="form-label">EndereÃ§o</label>
+            <label for="edit-logradouro" class="form-label">Endereço</label>
             <input type="text" class="form-control" id="edit-logradouro">
           </div>
           <div class="mb-3">
-            <label for="edit-numero" class="form-label">NÃºmero</label>
+            <label for="edit-numero" class="form-label">Número</label>
             <input type="text" class="form-control" id="edit-numero">
           </div>
           <div class="mb-3">
@@ -175,7 +170,7 @@ enciar_recorrencias.html
             <label for="edit-cpf" class="form-label">CPF</label>
             <input type="text" class="form-control" id="edit-cpf" readonly>
           </div>
-          <button type="submit" class="btn btn-primary">Salvar AlteraÃ§Ãµes</button>
+          <button type="submit" class="btn btn-primary">Salvar Alterações</button>
         </form>
       </div>
     </div>
@@ -187,7 +182,7 @@ enciar_recorrencias.html
       </div>
   
   </main>
-  <!--rodapÃ©-->
+  <!--rodapé-->
   <footer class="bg-light py-4">
         <div class="container d-flex justify-content-between align-items-center">
             <div class="footer-left text-center text-md-start">
@@ -196,7 +191,7 @@ enciar_recorrencias.html
             </div>
 
             <div class="footer-center text-center">
-                <p>Â© 2025 NutriTech</p>
+                <p>© 2025 NutriTech</p>
             </div>
 
             <div class="footer-right text-center text-md-end">
@@ -206,9 +201,8 @@ enciar_recorrencias.html
             </div>
         </div>
     </footer>
-  <script src="../../assets/js/donations/gerenciar_recorrencia.js"></script>
+  <script src="../../assets/js/donations/gerenciar_recorrencias.js"></script>
   <script src="../../assets/js/auth/login.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
 </html>
-
