--- a/codigo/public/modulos/user/cadastro_usuario.html
+++ b/codigo/public/modulos/user/cadastro_usuario.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cadastro de UsuÃ¡rio - NutriTech</title>
+  <title>Cadastro de Usuário - NutriTech</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../../assets/css/base.css">
   <link rel="stylesheet" href="../../assets/css/cadastro_usuario.css">
@@ -12,23 +12,18 @@
     <header class="d-flex align-items-center p-3 bg-light position-relative">
         <a href="../../index.html" class="d-flex align-items-center position-relative z-2"> 
             <img src="../../assets/images/logo.png" alt="Logo" class="logo me-3"> 
-            <h2 class="m-0 text-center">AlimentaÃ§Ã£o <br> Para <br> Todos</h2>
+            <h2 class="m-0 text-center">Alimentação <br> Para <br> Todos</h2>
         </a>
         <nav class="d-flex align-items-center gap-3 position-absolute top-50 start-50 translate-middle-x">
             <a href="../../ranking.html" class="nav-link link-white">Ranking</a> 
             <a href="../ong/ongs.html" class="nav-link link-white">ONGs</a>
-            <a href="../volunteers/voluntariado_ongs.html" class="nav-link link-white">Seja um VoluntÃ¡rio</a>
+            <a href="../volunteers/voluntariado_ongs.html" class="nav-link link-white">Seja um Voluntário</a>
         </nav>
         <div class="dropdown ms-auto position-relative z-2 d-none" id="userDropdownContainer">
             <button class="btn btn-link dropdown-toggle d-flex align-items-center p-0" id="usuarioDropdown"
                 data-bs-toggle="dropdown" aria-expanded="false">
-/cadastro_usuario.html
-                <h3 class="m-0 me-2" id="userNameDisplay">UsuÃ¡rio</h3>
-                <img src="../../assets/images/usuario.png" alt="UsuÃ¡rio" class="usuario" id="userImageDisplay"> 
-
-                <h3 class="m-0 me-2 " id="userNameDisplay">UsuÃ¡rio</h3>
-                <img src="../../assets/images/usuario.png" alt="UsuÃ¡rio" class="usuario" id="userImageDisplay"> 
-o_usuario.html
+                <h3 class="m-0 me-2" id="userNameDisplay">Usuário</h3>
+                <img src="../../assets/images/usuario.png" alt="Usuário" class="usuario" id="userImageDisplay"> 
             </button>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="usuarioDropdown">
                 <li><a class="dropdown-item" href="perfil_usuario.html" id="dropdownProfileLink">Perfil</a></li> 
@@ -37,13 +32,8 @@ o_usuario.html
             </ul>
         </div>
         <div class="usuario-container ms-auto" id="userSection">
-/cadastro_usuario.html
             <a href="login.html" class="btn btn-nutritech-primary me-2" id="loginButton">Login</a>  
             <a href="cadastro_usuario.html" class="btn btn-nutritech-secondary" id="registerButton">Cadastrar</a>
-
-            <a href="login.html" class="btn btn-nutritech-primary me-2" id="loginButton">Login</a> 
-            <a href="cadastro_ongs.html" class="user-btn" style="text-decoration: none; display: inline-block; text-align: center; padding: 10px 20px; background-color: #5D8736; color: white; border-radius: 5px;">Sou InstituiÃ§Ã£o</a>
-o_usuario.html
         </div>
     </header>
 
@@ -57,7 +47,7 @@ o_usuario.html
         </div>
 
         <div class="input-item full-width" role="radiogroup" aria-labelledby="genero-group-label">
-          <label id="genero-group-label">GÃªnero</label>
+          <label id="genero-group-label">Gênero</label>
           <div style="margin-top: 4px;">
             <span style="margin-right: 15px;">
               <input type="radio" id="feminino" name="genero" value="feminino" required>
@@ -73,7 +63,7 @@ o_usuario.html
             </span>
             <span>
               <input type="radio" id="naoinformar" name="genero" value="naoinformar">
-              <label for="naoinformar" style="font-weight: normal; font-size: 0.9em; margin-left: 4px;">Prefiro nÃ£o informar</label>
+              <label for="naoinformar" style="font-weight: normal; font-size: 0.9em; margin-left: 4px;">Prefiro não informar</label>
             </span>
           </div>
         </div>
@@ -94,8 +84,8 @@ o_usuario.html
         </div>
 
         <div class="input-item full-width">
-          <label for="login">Nome de UsuÃ¡rio (para login)</label>
-          <input type="text" id="login" name="login" placeholder="Crie um nome de usuÃ¡rio" required />
+          <label for="login">Nome de Usuário (para login)</label>
+          <input type="text" id="login" name="login" placeholder="Crie um nome de usuário" required />
         </div>
 
         <div class="input-group">
@@ -119,7 +109,7 @@ o_usuario.html
         </div>
         
         <fieldset>
-            <legend>EndereÃ§o</legend>
+            <legend>Endereço</legend>
             <div class="input-item full-width">
               <label for="rua">Rua</label>
               <input type="text" id="rua" name="rua" placeholder="Digite o nome da rua" required>
@@ -158,7 +148,7 @@ o_usuario.html
             </div>
 
             <div class="footer-center text-center">
-                <p>Â© 2025 NutriTech</p>
+                <p>© 2025 NutriTech</p>
             </div>
 
             <div class="footer-right text-center text-md-end">
