--- a/codigo/public/modulos/volunteers/voluntariado_ongs.html
+++ b/codigo/public/modulos/volunteers/voluntariado_ongs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ONGs que Aceitam VoluntÃ¡rios</title>
+    <title>ONGs que Aceitam Voluntários</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../../assets/css/base.css">
     <link rel="stylesheet" href="../../assets/css/style.css">
@@ -13,24 +13,19 @@
     <header>
         <a href="../../index.html" class="d-flex align-items-center position-relative z-2">
             <img src="../../assets/images/logo.png" alt="Logo" class="logo me-3">
-            <h2 class="m-0 text-center">AlimentaÃ§Ã£o <br> Para <br> Todos</h2>
+            <h2 class="m-0 text-center">Alimentação <br> Para <br> Todos</h2>
         </a>
         <nav class="d-flex align-items-center gap-3 position-absolute top-50 start-50 translate-middle-x">
             <a href="../../ranking.html" class="nav-link link-white">Ranking</a>
             <a href="../ong/ongs.html" class="nav-link link-white">ONGs</a>
-            <a href="voluntariado_ongs.html" class="nav-link link-white">Seja um VoluntÃ¡rio</a>
+            <a href="voluntariado_ongs.html" class="nav-link link-white">Seja um Voluntário</a>
         </nav>
 
         <div class="dropdown ms-auto position-relative z-2 d-none" id="userDropdownContainer">
             <button class="btn btn-link dropdown-toggle d-flex align-items-center p-0" id="usuarioDropdown"
                 data-bs-toggle="dropdown" aria-expanded="false">
-teers/voluntariado_ongs.html
-                <h3 class="m-0 me-2" id="userNameDisplay">UsuÃ¡rio</h3>
-                <img src="../../assets/images/usuario.png" alt="UsuÃ¡rio" class="usuario" id="userImageDisplay">
-
-                <h3 class="m-0 me-2 " id="userNameDisplay">UsuÃ¡rio</h3>
-                <img src="../../assets/images/usuario.png" alt="UsuÃ¡rio" class="usuario" id="userImageDisplay"> 
-tariado_ongs.html
+                <h3 class="m-0 me-2" id="userNameDisplay">Usuário</h3>
+                <img src="../../assets/images/usuario.png" alt="Usuário" class="usuario" id="userImageDisplay">
             </button>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="usuarioDropdown">
                 <li><a class="dropdown-item" href="../user/perfil_usuario.html" id="dropdownProfileLink">Perfil</a></li>
@@ -47,15 +42,15 @@ tariado_ongs.html
     </header>
 
     <main class="container mt-4">
-        <h1 class="mb-4 text-center">Seja VoluntÃ¡rio</h1>
-        <p class="text-center mb-4">Clique na ONG em que vocÃª deseja se voluntariar para preencher suas informaÃ§Ãµes.</p>
+        <h1 class="mb-4 text-center">Seja Voluntário</h1>
+        <p class="text-center mb-4">Clique na ONG em que você deseja se voluntariar para preencher suas informações.</p>
         <div class="table-responsive">
             <table class="table table-hover" id="ongsTable">
                 <thead class="table-light">
                     <tr>
                         <th scope="col" style="width: 10%;" aria-label="Imagem da ONG"></th> 
                         <th scope="col" style="width: 25%;">Nome da ONG</th>
-                        <th scope="col">DescriÃ§Ã£o</th>
+                        <th scope="col">Descrição</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -72,7 +67,7 @@ tariado_ongs.html
             </div>
 
             <div class="footer-center text-center">
-                <p>Â© 2025 NutriTech</p>
+                <p>© 2025 NutriTech</p>
             </div>
 
             <div class="footer-right text-center text-md-end">
@@ -88,4 +83,3 @@ tariado_ongs.html
 <script src="../../assets/js/auth/login.js"></script>
 <script src="../../assets/js/volunteers/voluntariado_ongs.js"></script>
 </html>
-
