Alterações na página about

--- a/codigo/public/about.html
+++ b/codigo/public/about.html
@@ -250,7 +250,7 @@
                 <div class="col-lg-3 col-md-4 col-sm-6 text-center mb-4">
                     <div class="card border-0 shadow-sm h-100">
                         <div class="card-body p-4">
-                            <img src="assets/images/usuario.png" alt="Raphael Thierry" class="rounded-circle mb-3" style="width: 80px; height: 80px;">
+                            <img src="assets/images/raphael_thierry.jpeg" alt="Raphael Thierry" class="rounded-circle mb-3" style="width: 80px; height: 80px;">
                             <h6 class="card-title text-success">Raphael Thierry</h6>
                             <p class="text-muted small mb-0">Desenvolvedor</p>
                         </div>
