atualização index.html, botoes funcionais.

--- a/codigo/public/index.html
+++ b/codigo/public/index.html
@@ -77,11 +77,11 @@
                 <div class="row text-center">
                     <div class="col-md-6">
                         <p>Ao doar você ajuda a combater a fome de várias comunidades carentes.</p>
-                        <button class="btn btn-success doacao-btn">DOAR</button>
+                        <a href="modulos/ong/ongs.html" class="btn btn-success doacao-btn" id="doarBtn">DOAR</a>
                     </div>
                     <div class="col-md-6">
                         <p>Você pode se tornar um doador recorrente e ajudar frequentemente no combate à fome!</p>
-                        <button class="btn btn-success doacao-btn">SER DOADOR</button>
+                        <a href="modulos/ong/ongs.html" class="btn btn-success doacao-btn" id="serDoadorBtn">SER DOADOR</a>
                     </div>
                 </div>
             </div>
