--- a/codigo/public/modulos/user/cadastro_usuario.html
+++ b/codigo/public/modulos/user/cadastro_usuario.html
@@ -92,11 +92,11 @@
         <div class="input-group">
           <div class="input-item">
             <label for="cpf">CPF</label>
-            <input type="text" id="cpf" name="cpf" placeholder="Digite seu CPF" required />
+            <input type="text" id="cpf" name="cpf" placeholder="000.000.000-00" maxlength="14" required />
           </div>
           <div class="input-item">
             <label for="telefone">Telefone</label>
-            <input type="tel" id="telefone" name="telefone" placeholder="Digite seu telefone" required />
+            <input type="tel" id="telefone" name="telefone" placeholder="(11) 99999-9999" maxlength="15" required />
           </div>
         </div>
 
@@ -131,7 +131,7 @@
             </div>
             <div class="input-item full-width">
               <label for="cep">CEP</label>
-              <input type="text" id="cep" name="cep" placeholder="Digite o CEP" required>
+              <input type="text" id="cep" name="cep" placeholder="00000-000" maxlength="9" required>
             </div>
         </fieldset>
 
