--- a/codigo/public/modulos/donations/cartao.html
+++ b/codigo/public/modulos/donations/cartao.html
@@ -49,28 +49,28 @@
                     <h1>Insira os dados do seu cartão</h1>
                     <div class="input-grupo">
                         <label for="valor">Valor da Doação</label>
-                        <input type="text" id="valor" required>
+                        <input type="text" id="valor" placeholder="R$ 0,00" required>
                     </div>
                     <div class="input-grupo">
                         <label for="cpf">CPF</label>
-                        <input type="text" id="cpf" required>
+                        <input type="text" id="cpf" placeholder="000.000.000-00" required>
                     </div>
                     <div class="input-grupo">
                         <label for="num-cartao">Número do Cartão</label>
-                        <input type="text" id="num-cartao" required>
+                        <input type="text" id="num-cartao" placeholder="0000 0000 0000 0000" maxlength="19" required>
                     </div>
                     <div class="input-grupo">
                         <label for="titular">Nome do Titular</label>
-                        <input type="text" id="titular" required>
+                        <input type="text" id="titular" placeholder="Nome como está no cartão" required>
                     </div>
                     <div class="input-flex">
                         <div class="input-grupo">
                             <label for="validade">Validade</label>
-                            <input type="text" id="validade" required>
+                            <input type="text" id="validade" placeholder="MM/AAAA" maxlength="7" required>
                         </div>
                         <div class="input-grupo">
                             <label for="cvv">CVV</label>
-                            <input type="text" id="cvv" required>
+                            <input type="text" id="cvv" placeholder="000" maxlength="3" required>
                         </div>
                     </div>
                     <div class="input-grupo">
