--- a/codigo/public/modulos/ong/cadastro_ongs.html
+++ b/codigo/public/modulos/ong/cadastro_ongs.html
@@ -61,7 +61,7 @@
                         </div>
                         <div class="input-item">
                             <label for="cnpj">CNPJ:</label>
-                            <input type="text" id="cnpj" name="cnpj" required>
+                            <input type="text" id="cnpj" name="cnpj" placeholder="00.000.000/0000-00" maxlength="18" required>
                         </div>
                     </div>
                     <div class="input-group">
@@ -115,7 +115,7 @@
                         </div>
                         <div class="input-item">
                             <label for="cep">CEP:</label>
-                            <input type="number" id="cep" name="cep" required>
+                            <input type="text" id="cep" name="cep" placeholder="00000-000" maxlength="9" required>
                         </div>
                     </div>
                 </fieldset>
@@ -125,7 +125,7 @@
                     <div class="input-group">
                         <div class="input-item">
                             <label for="telefone">Telefone:</label>
-                            <input type="tel" name="telefone" id="telefone" required>
+                            <input type="tel" name="telefone" id="telefone" placeholder="(11) 99999-9999" maxlength="15" required>
                         </div>
                         <div class="input-item">
                             <label for="email">Email:</label>
