--- a/codigo/public/modulos/ong/editar_perfil_ong.html
+++ b/codigo/public/modulos/ong/editar_perfil_ong.html
@@ -56,7 +56,7 @@
                                 </div>
                                 <div class="col-md-6 mb-3">
                                     <label for="cnpj" class="form-label">CNPJ</label>
-                                    <input type="text" class="form-control" id="cnpj" name="cnpj" required maxlength="18">
+                                    <input type="text" class="form-control" id="cnpj" name="cnpj" placeholder="00.000.000/0000-00" required maxlength="18">
                                 </div>
                             </div>
                             <div class="mb-3">
