--- a/codigo/public/modulos/user/editar_perfil_usuario.html
+++ b/codigo/public/modulos/user/editar_perfil_usuario.html
@@ -52,11 +52,11 @@
                     <div class="row">
                         <div class="col-md-6 mb-3">
                             <label for="telefone" class="form-label">Telefone</label>
-                            <input type="tel" class="form-control" id="telefone" required>
+                            <input type="tel" class="form-control" id="telefone" placeholder="(11) 99999-9999" maxlength="15" required>
                         </div>
                         <div class="col-md-6 mb-3">
                             <label for="cpf" class="form-label">CPF</label>
-                            <input type="text" class="form-control" id="cpf" required>
+                            <input type="text" class="form-control" id="cpf" placeholder="000.000.000-00" maxlength="14" required>
                         </div>
                     </div>
                     <div class="row">
