correção cadastro_doação formatação

--- a/codigo/public/modulos/donations/cadastro_doacao.html
+++ b/codigo/public/modulos/donations/cadastro_doacao.html
@@ -42,16 +42,15 @@
         </div>
     </header>
 
-<main class="container-fluid my-5 px-5">
+<main class="container-fluid my-5 px-5 flex-grow-1">
     <div class="row">
         <div class="col-md-6 border-end pe-4 d-flex flex-column align-items-center">
             <h1 class="mb-4 text-center">Cadastro de Doação</h1>
-            <h4 id="donation-target-ong-name" class="mb-3 text-center"></h4> <!-- Placeholder for ONG name -->
+            <h4 id="donation-target-ong-name" class="mb-3 text-center"></h4>
             <form action="" class="row g-3">
                 <div class="col-12">
                     <label for="alimento" class="form-label">Tipo de Alimento:</label>
                     <select name="alimento" id="alimento" class="form-select" required>
-                        <!-- Options will be dynamically populated by JavaScript -->
                     </select>
                 </div>
                 <div class="col-12">
